--- a/pages/page-2.html
+++ b/pages/page-2.html
@@ -9,10 +9,7 @@
 </head>
 
 <body>
-  <h1>Hello</h1>
-  <a href="/download" class="link">Скачать страничку</a>
-  <a href="/page-1.html" class="link">Page 1 link</a>
-  <script type="module" src="index.js"></script>
+  <h1>page-2</h1>
 </body>
 
 </html>
